[package]
name = "twisty_beziers"
version = "0.1.0"
authors = ["Masterchef365 <duncan.freeman1@gmail.com>"]
edition = "2018"

[dependencies]
klystron = { git = "https://github.com/Masterchef365/klystron.git", rev = "5edba5414dceedc2e11de7252bc5b138f9949b61" }
nalgebra = "0.22"
anyhow = "1"
rand = "0.7"
