[package]
name = "twisty_beziers"
version = "0.1.0"
authors = ["Masterchef365 <duncan.freeman1@gmail.com>"]
edition = "2018"

[dependencies]
klystron = { git = "https://github.com/Masterchef365/klystron.git", branch = "twisty_beziers" }
nalgebra = "0.22"
anyhow = "1"
wiiboard = { git = "https://github.com/Masterchef365/wiiboard.git", branch = "better_polling" }
gilrs = "0.7.2"
structopt = { version = "0.3", default-features = false }
